--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>code-with-quarkus - 1.0.0-SNAPSHOT</title>
+        <title>socket_car_game - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -235,10 +235,10 @@
                         <div class="app-details">
                             <h5>Application</h5>
                             <ul>
-                                <li>GroupId: <code>org.acme</code></li>
-                                <li>ArtifactId: <code>code-with-quarkus</code></li>
+                                <li>GroupId: <code>polytech.game</code></li>
+                                <li>ArtifactId: <code>socket_car_game</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>3.8.1</code></li>
+                                <li>Quarkus Version: <code>3.8.2</code></li>
                             </ul>
                         </div>
                     </div>
@@ -276,11 +276,12 @@
                         <li title="Document your REST APIs with OpenAPI - comes with Swagger UI">SmallRye OpenAPI (<a href="https://quarkus.io/guides/openapi-swaggerui" target="_blank">guide</a>)</li>
                         <li title="A Jakarta REST implementation utilizing build time processing and Vert.x. This extension is not compatible with the quarkus-resteasy extension, or any of the extensions that depend on it.">RESTEasy Reactive (<a href="https://quarkus.io/guides/resteasy-reactive" target="_blank">guide</a>)</li>
                         <li title="WebSocket communication channel support">WebSockets (<a href="https://quarkus.io/guides/websockets" target="_blank">guide</a>)</li>
+                        <li title="Generate Kubernetes resources from annotations">Kubernetes (<a href="https://quarkus.io/guides/kubernetes" target="_blank">guide</a>)</li>
                     </ul>
                     <h5><a href="https://quarkus.io/guides/">Documentation</a></h5>
                     <p>Practical step-by-step guides to help you achieve a specific goal. Use them to help get your work
                         done.</p>
-                    <h5><a href="https://quarkus.io/guides/maven-tooling">Set up your IDE</a></h5>
+                    <h5><a href="https://quarkus.io/guides/gradle-tooling">Set up your IDE</a></h5>
                     <p>Everyone has a favorite IDE they like to use to code. Learn how to configure yours to maximize your
                         Quarkus productivity.</p>
                 </div>
